<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_Story"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_Story" />

    <item
        android:id="@+id/navigation_Report"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_Report" />
    <item
        android:id="@+id/navigation_Write"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_Write" />

    <item
        android:id="@+id/navigation_Map"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_Map" />

    <item
        android:id="@+id/navigation_Settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_Settings" />

</menu>
